netbsd support, needs cleanup first
Signed-off-by: Tobias Ulmer <tobiasu@tmux.org>

--- a/gcc/ada/gcc-interface/Make-lang.in
+++ b/gcc/ada/gcc-interface/Make-lang.in
@@ -1027,7 +1027,7 @@ check_acats_subdirs=$(wordlist 1, \
 check_acats_targets = $(addprefix check-acats, $(check_acats_subdirs))
 
 check-acats:
-	@test -d $(ACATSDIR) || mkdir -p $(ACATSDIR); \
+	set -x; test -d $(ACATSDIR) || mkdir -p $(ACATSDIR); \
 	rootme=`${PWD_COMMAND}`; export rootme; \
 	EXPECT=$(EXPECT); export EXPECT; \
 	if [ -z "$(CHAPTERS)" ] && [ -n "$(filter -j%, $(MFLAGS))" ]; \
